--- a/content/index.html
+++ b/content/index.html
@@ -1,5 +1,5 @@
 <div class="placeholder ar43">
-	<label>Experiment A</label>
+	<label>Teaser Image</label>
 </div>
 <section class="container">
 	<p>The earliest human traces in the area of modern Berlin are dated around 60,000 BC. A Mesolithic deer antler mask was dated around 9000 BC. During Neolithic times a large number of communities existed in the area and in the Bronze Age up to 1000 people lived in 50 villages. Early Germanic tribes took settlement from 500 BC. Slavic settlements and castles began around 750 AD.</p>
@@ -8,7 +8,9 @@
 	<label>Video</label>
 </div>
 <section class="container">
-	<p>In the early 20th century, Berlin had become a fertile ground for the German Expressionist movement. In fields such as architecture, painting and cinema new forms of artistic styles were invented. At the end of the First World War in 1918, a republic was proclaimed by Philipp Scheidemann at the Reichstag building. In 1920, the Greater Berlin Act incorporated dozens of suburban cities, villages, and estates around Berlin into an expanded city.</p>
+	<p>The Brandenburg Gate is an iconic landmark of Berlin and Germany; it stands as a symbol of eventful European history and of unity and peace. The Reichstag building is the traditional seat of the German Parliament. It was remodeled by British architect Norman Foster in the 1990s and features a glass dome over the session area, which allows free public access to the parliamentary proceedings and magnificent views of the city.</p>
+	<p>
+	The East Side Gallery is an open-air exhibition of art painted directly on the last existing portions of the Berlin Wall. It is the largest remaining evidence of the city's historical division.</p>
 </section>
 
 
