--- a/content/privacy-policy.html
+++ b/content/privacy-policy.html
@@ -1,8 +1,8 @@
 <section class="container">
 	<h1>Privacy Policy</h1>
-	<p>The earliest human traces in the area of modern Berlin are dated around 60,000 BC. A Mesolithic deer antler mask was dated around 9000 BC. During Neolithic times a large number of communities existed in the area and in the Bronze Age up to 1000 people lived in 50 villages. Early Germanic tribes took settlement from 500 BC. Slavic settlements and castles began around 750 AD.</p>
+	<p>Berlin hosts in total 158 foreign embassies as well as the headquarters of many think tanks, trade unions, nonprofit organizations, lobbying groups, and professional associations. Due to the influence and international partnerships of the Federal Republic of Germany, the capital city has become a significant center of German and European affairs. Frequent official visits and diplomatic consultations among governmental representatives and national leaders are common in contemporary Berlin.</p>
 </section>
 <section class="container">
-	<p>In the early 20th century, Berlin had become a fertile ground for the German Expressionist movement. In fields such as architecture, painting and cinema new forms of artistic styles were invented. At the end of the First World War in 1918, a republic was proclaimed by Philipp Scheidemann at the Reichstag building. In 1920, the Greater Berlin Act incorporated dozens of suburban cities, villages, and estates around Berlin into an expanded city.</p>
+	<p>Berlin is known for its numerous cultural institutions, many of which enjoy international reputation.The diversity and vivacity of the metropolis led to a trendsetting atmosphere. An innovative music, dance and art scene has developed in the 21st century.</p>
 </section>
 
