--- a/content/experiment-a.html
+++ b/content/experiment-a.html
@@ -1,11 +1,16 @@
 <section class="container">
-	<h1> Experiment A: Face Detection</h1>
+	<h1> Experiment A: Face Detection ...</h1>
 </section>
-<div class="placeholder ar43">
-	<label>Experiment A</label>
+<div class="container">
+	<div class="video-canvas">
+		<video id="camera-video" autoplay playsinline></video>
+		<canvas id="camera-canvas"></canvas>
+	</div>
 </div>
 
 <section class="container">
 	<p>German is the official and predominant spoken language in Berlin. It is a West Germanic language that derives most of its vocabulary from the Germanic branch of the Indo-European language family. German is one of 24 languages of the European Union,[113] and one of the three working languages of the European Commission.</p>
 </section>
 
+<script src="/static/face-api.min.js"></script>
+<script src="/static/main.js"></script>
