--- a/content/experiment-a.html
+++ b/content/experiment-a.html
@@ -2,10 +2,12 @@
 	<h1> Experiment A: Face Detection ...</h1>
 </section>
 <div class="container">
-	<div class="video-canvas">
-		<video id="camera-video" autoplay playsinline></video>
-		<canvas id="camera-canvas"></canvas>
+	<div id="experiment-a">
 	</div>
+</div>
+
+<div class="container">
+	<pre class="debug-output"></pre>
 </div>
 
 <section class="container">
@@ -13,4 +15,4 @@
 </section>
 
 <script src="/static/face-api.min.js"></script>
-<script src="/static/main.js"></script>
+<script src="/static/experiment-a.js" type="module"></script>
