basic setup for exp B

--- a/content/experiment-b.html
+++ b/content/experiment-b.html
@@ -1,10 +1,20 @@
 <section class="container">
 	<h1> Experiment B: Face Recognition</h1>
 </section>
-<div class="placeholder ar43">
-	<label>Experiment B</label>
+<div class="container">
+	<div id="experiment-b">
+		<canvas class="reference"></canvas>
+		<div class="video-canvas"></div>
+	</div>
 </div>
+
+<div class="container">
+	<pre class="debug-output"></pre>
+</div>
+
 <section class="container">
 	<p>Berlin is subdivided into 12 boroughs or districts (Bezirke). Each borough has several subdistricts or neighborhoods (Ortsteile), which have roots in much older municipalities that predate the formation of Greater Berlin on 1 October 1920. These subdistricts became urbanized and incorporated into the city later on. Many residents strongly identify with their neighborhoods, colloquially called Kiez. At present, Berlin consists of 96 subdistricts, which are commonly made up of several smaller residential areas or quarters.</p>
 </section>
 
+<script src="/static/face-api.min.js"></script>
+<script src="/static/experiment-b.js" type="module"></script>
