working face recognition

--- a/content/experiment-a.html
+++ b/content/experiment-a.html
@@ -14,5 +14,5 @@
 	<p>German is the official and predominant spoken language in Berlin. It is a West Germanic language that derives most of its vocabulary from the Germanic branch of the Indo-European language family. German is one of 24 languages of the European Union,[113] and one of the three working languages of the European Commission.</p>
 </section>
 
-<script src="/static/face-api.min.js"></script>
+<script src="/static/face-api.js"></script>
 <script src="/static/experiment-a.js" type="module"></script>
