--- a/content/experiment-b.html
+++ b/content/experiment-b.html
@@ -16,5 +16,5 @@
 	<p>Berlin is subdivided into 12 boroughs or districts (Bezirke). Each borough has several subdistricts or neighborhoods (Ortsteile), which have roots in much older municipalities that predate the formation of Greater Berlin on 1 October 1920. These subdistricts became urbanized and incorporated into the city later on. Many residents strongly identify with their neighborhoods, colloquially called Kiez. At present, Berlin consists of 96 subdistricts, which are commonly made up of several smaller residential areas or quarters.</p>
 </section>
 
-<script src="/static/face-api.min.js"></script>
+<script src="/static/face-api.js"></script>
 <script src="/static/experiment-b.js" type="module"></script>
