class-based refactor

--- a/content/experiment-a.html
+++ b/content/experiment-a.html
@@ -1,17 +1,22 @@
-<section class="container">
-	<h1> Experiment A: Face Detection ...</h1>
-</section>
-<div class="container">
+<header class="container">
+	<h1>Gesichtserkennung</h1>
+</header>
+<section class="">
 	<div id="experiment-a">
 	</div>
-</div>
-
-<div class="container">
-	<pre class="debug-output"></pre>
-</div>
+</section>
 
 <section class="container">
-	<p>German is the official and predominant spoken language in Berlin. It is a West Germanic language that derives most of its vocabulary from the Germanic branch of the Indo-European language family. German is one of 24 languages of the European Union,[113] and one of the three working languages of the European Commission.</p>
+	<p>Kannst du die Gesichtserkennung austricksen so dass du nicht mehr gefunden wirst?</p>
+	<p>Ein paar Dinge die du versuchen kannst:</p>
+	<ul>
+		<li>Teile des Gesichts verdecken</li>
+		<li>Den Raum dunkler machen</li>
+		<li>Den Kopf zur Seite drehen oder neigen</li>
+		<li>Eine Sonnenbrille aufsetzen</li>
+	</ul>
+
+	<p>Viele Dinge erschweren es dem Sytem, dein Gesicht zu erkenne. Probiere aus was funktioniert und was nicht.</p>
 </section>
 
 <script src="/static/face-api.js"></script>
