--- a/content/experiment-b.html
+++ b/content/experiment-b.html
@@ -1,15 +1,9 @@
 <section class="container">
 	<h1> Experiment B: Face Recognition</h1>
 </section>
-<div class="container">
+<div class="">
 	<div id="experiment-b">
-		<canvas class="reference"></canvas>
-		<div class="video-canvas"></div>
 	</div>
-</div>
-
-<div class="container">
-	<pre class="debug-output"></pre>
 </div>
 
 <section class="container">
