--- a/content/experiment-b.html
+++ b/content/experiment-b.html
@@ -3,6 +3,12 @@
 </section>
 <div class="">
 	<div id="experiment-b">
+		<div class="overlay">
+			<input type="file" class="image-upload" />
+			<button class="default-reference">Default</button>
+			<button class="capture-reference">Capture</button>
+			<button class="confirm-reference">Confirm</button>
+		</div>
 	</div>
 </div>
 
