launcher buttons and controls

--- a/content/experiment-a.html
+++ b/content/experiment-a.html
@@ -3,6 +3,9 @@
 </header>
 <section class="">
 	<div id="experiment-a">
+		<div class="launcher">
+			<button>Start</button>
+		</div>
 	</div>
 </section>
 
