prettier styling and layout

--- a/content/experiment-a.html
+++ b/content/experiment-a.html
@@ -1,5 +1,5 @@
 <header class="container">
-	<h1>Gesichtserkennung</h1>
+	<h1>Erkennung</h1>
 </header>
 <section class="">
 	<div id="experiment-a">
