--- a/content/experiment-b.html
+++ b/content/experiment-b.html
@@ -1,6 +1,6 @@
-<section class="container">
-	<h1> Experiment B: Face Recognition</h1>
-</section>
+<header class="container">
+	<h1>Identifikation</h1>
+</header>
 <div class="">
 	<div id="experiment-b">
 		<div class="launcher">
@@ -10,8 +10,11 @@
 </div>
 
 <section class="container">
-	<p>Berlin is subdivided into 12 boroughs or districts (Bezirke). Each borough has several subdistricts or neighborhoods (Ortsteile), which have roots in much older municipalities that predate the formation of Greater Berlin on 1 October 1920. These subdistricts became urbanized and incorporated into the city later on. Many residents strongly identify with their neighborhoods, colloquially called Kiez. At present, Berlin consists of 96 subdistricts, which are commonly made up of several smaller residential areas or quarters.</p>
+	<p>Lade ein Bild als Referenz hoch oder mach ein Foto mit der Kamera. Die KI wird dann versuchen Gesichter aus dem Referenzbild wiederzu erkennen.</p>
+	<p>Wird sie dich finden, oder vielleicht verwechseln?</p>
+	<p>Probier es aus.</p>
 </section>
 
 <script src="/static/face-api.js"></script>
 <script src="/static/experiment-b.js" type="module"></script>
+
