--- a/content/index.html
+++ b/content/index.html
@@ -1,12 +1,13 @@
-<div class="placeholder ar43">
-	<label>Teaser Image</label>
-</div>
+<section class="teaser">
+	<img src="/assets/bg-image-3.jpg" />
+</section>
 <section class="container">
 	<p>The earliest human traces in the area of modern Berlin are dated around 60,000 BC. A Mesolithic deer antler mask was dated around 9000 BC. During Neolithic times a large number of communities existed in the area and in the Bronze Age up to 1000 people lived in 50 villages. Early Germanic tribes took settlement from 500 BC. Slavic settlements and castles began around 750 AD.</p>
 </section>
-<div class="placeholder ar43">
-	<label>Video</label>
-</div>
+
+<section class="video-embed">
+	<iframe src="https://www.youtube.com/embed/3LIvHF-IX9Y?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+</section>
 <section class="container">
 	<p>The Brandenburg Gate is an iconic landmark of Berlin and Germany; it stands as a symbol of eventful European history and of unity and peace. The Reichstag building is the traditional seat of the German Parliament. It was remodeled by British architect Norman Foster in the 1990s and features a glass dome over the session area, which allows free public access to the parliamentary proceedings and magnificent views of the city.</p>
 	<p>
