add multiple sets of references, UI icons

--- a/content/experiment-a.html
+++ b/content/experiment-a.html
@@ -4,6 +4,9 @@
 <section class="">
 	<div id="experiment-a">
 		<div class="launcher">
+			<div>Lorem ipsum</div>
+			<div>dolor sit</div>
+			<div>amet</div>
 			<button>Start</button>
 		</div>
 	</div>
@@ -12,14 +15,42 @@
 <section class="container">
 	<p>Kannst du die Gesichtserkennung austricksen so dass du nicht mehr gefunden wirst?</p>
 	<p>Ein paar Dinge die du versuchen kannst:</p>
-	<ul>
-		<li>Teile des Gesichts verdecken</li>
-		<li>Den Raum dunkler machen</li>
-		<li>Den Kopf zur Seite drehen oder neigen</li>
-		<li>Eine Sonnenbrille aufsetzen</li>
-	</ul>
+</section>
 
-	<p>Viele Dinge erschweren es dem Sytem, dein Gesicht zu erkenne. Probiere aus was funktioniert und was nicht.</p>
+<section class="container hint">
+	<h2 class="heading">Verdeckung</h2>
+	<div class="placeholder ar11 image">
+		<label>Foto</label>
+	</div>
+
+	<div class="inner">
+		<p>Versuche z.B. Teile deines Gesichts zu verdecken.</p>
+		<p>Besonders die Augen sind wichtig um Gesichter im Bild finden zu können.</p>
+	</div>
+</section>
+
+<section class="container hint">
+	<h2 class="heading">Perspektive</h2>
+	<div class="placeholder ar11 image">
+		<label>Foto</label>
+	</div>
+
+	<div class="inner">
+		<p>Die KI ist darauf trainiert Gesichter von vorne zu erkennnen.</p>
+		<p>Versuch' mal den Kopf zur Seite zu drehen oder zu neigen.</p>
+	</div>
+</section>
+
+<section class="container hint">
+	<h2 class="heading">Umgebung</h2>
+	<div class="placeholder ar11 image">
+		<label>Foto</label>
+	</div>
+
+	<div class="inner">
+		<p>Die Umgebung zu ändern kann der KI auch die Arbeit schwerer machen, zum Beispiel wenn es nicht hell genug ist, oder zu hell.</p>
+		<p>Mach das Licht aus, oder halte die Kamera so dass die Sonne im Bild ist und blendet.</p>
+	</div>
 </section>
 
 <script src="/static/face-api.js"></script>
