--- a/content/experiment-b.html
+++ b/content/experiment-b.html
@@ -15,6 +15,42 @@
 	<p>Probier es aus.</p>
 </section>
 
+<section class="container hint">
+	<h2 class="heading">Verdeckung</h2>
+	<div class="placeholder ar11 image">
+		<label>Foto</label>
+	</div>
+
+	<div class="inner">
+		<p>Versuche z.B. Teile deines Gesichts zu verdecken.</p>
+		<p>Besonders die Augen sind wichtig um Gesichter im Bild finden zu können.</p>
+	</div>
+</section>
+
+<section class="container hint">
+	<h2 class="heading">Perspektive</h2>
+	<div class="placeholder ar11 image">
+		<label>Foto</label>
+	</div>
+
+	<div class="inner">
+		<p>Die KI ist darauf trainiert Gesichter von vorne zu erkennnen.</p>
+		<p>Versuch' mal den Kopf zur Seite zu drehen oder zu neigen.</p>
+	</div>
+</section>
+
+<section class="container hint">
+	<h2 class="heading">Umgebung</h2>
+	<div class="placeholder ar11 image">
+		<label>Foto</label>
+	</div>
+
+	<div class="inner">
+		<p>Die Umgebung zu ändern kann der KI auch die Arbeit schwerer machen, zum Beispiel wenn es nicht hell genug ist, oder zu hell.</p>
+		<p>Mach das Licht aus, oder halte die Kamera so dass die Sonne im Bild ist und blendet.</p>
+	</div>
+</section>
+
 <script src="/static/face-api.js"></script>
 <script src="/static/experiment-b.js" type="module"></script>
 
