example text snippets

--- a/content/experiment-a.html
+++ b/content/experiment-a.html
@@ -1,12 +1,13 @@
-<header class="container">
-	<h1>Erkennung</h1>
+
+<header class="off-screen">
+	<h1>Gesichter erkennen, oder nicht?</h1>
 </header>
 <section class="">
 	<div id="experiment-a">
 		<div class="launcher">
-			<div>Lorem ipsum</div>
-			<div>dolor sit</div>
-			<div>amet</div>
+			<div>Gesichter</div>
+			<div>erkennen</div>
+			<div>oder nicht?</div>
 			<button>Start</button>
 		</div>
 	</div>
