--- a/content/experiment-a.html
+++ b/content/experiment-a.html
@@ -5,10 +5,11 @@
 <section class="">
 	<div id="experiment-a">
 		<div class="launcher">
-			<div>Gesichter</div>
-			<div>erkennen</div>
-			<div>oder nicht?</div>
-			<button>Start</button>
+			<div class="cover"></div>
+			<div class="info">
+				<h2>Gesichtserkennung oder nicht?</h2>
+				<button>Experiment starten</button>
+			</div>
 		</div>
 	</div>
 </section>
@@ -52,6 +53,10 @@
 		<p>Die Umgebung zu ändern kann der KI auch die Arbeit schwerer machen, zum Beispiel wenn es nicht hell genug ist, oder zu hell.</p>
 		<p>Mach das Licht aus, oder halte die Kamera so dass die Sonne im Bild ist und blendet.</p>
 	</div>
+</section>
+
+<section class="container video-embed">
+	<iframe src="https://www.youtube.com/embed/3LIvHF-IX9Y?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </section>
 
 <script src="/static/face-api.js"></script>
