--- a/content/experiment-b.html
+++ b/content/experiment-b.html
@@ -4,10 +4,11 @@
 <section>
 	<div id="experiment-b">
 		<div class="launcher">
-			<div>Gesichter</div>
-			<div>wieder</div>
-			<div>erkennen?</div>
-			<button>Start</button>
+			<div class="cover"></div>
+			<div class="info">
+				<h2>Gesichter wiedererkennen?</h2>
+				<button>Experiment starten</button>
+			</div>
 		</div>
 	</div>
 </section>
@@ -52,6 +53,10 @@
 		<p>Wenn mehrmals das gleiche Gesicht vorhanden ist, wird es uneindeutig.</p>
 		<p>Verwende mehrere Bilder von dir als Referenz gleichzeitig und finde heraus welches eher wiedererkannt wird und wie du das beeinflussen kannst.</p>
 	</div>
+</section>
+
+<section class="container video-embed">
+	<iframe src="https://www.youtube.com/embed/3LIvHF-IX9Y?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </section>
 
 <script src="/static/face-api.js"></script>
