--- a/content/index.html
+++ b/content/index.html
@@ -2,17 +2,19 @@
 	<img src="/assets/bg-image-3.jpg" />
 </section>
 <section class="container">
-	<p>The earliest human traces in the area of modern Berlin are dated around 60,000 BC. A Mesolithic deer antler mask was dated around 9000 BC. During Neolithic times a large number of communities existed in the area and in the Bronze Age up to 1000 people lived in 50 villages. Early Germanic tribes took settlement from 500 BC. Slavic settlements and castles began around 750 AD.</p>
-</section>
+	<h1>Willkommen!</h1>
+<p>
+Mit dieser Webseite möchten wir euch einen spannenden Einblick in die Welt der Künstlichen Intelligenz rund um das Thema Gesichtserkennung geben. Dafür haben wir zwei Experimente zu Facial-Detection und Facial-Recognition als Teil des Forschungsprojekts Künstliche Intelligenz, menschlich erklärt entwickelt. Dieses Projekt wurde in Kooperation zwischen dem Alexander von Humboldt Institut für Internet und Gesellschaft (HIIG) und der gemeinnützigen Organisation neuland & gestalten durchgeführt und von der Entwicklerin Esther Weidauer umgesetzt.
+</p>
+<p>
+Diese Webseite lädt alle dazu ein, ein Gesichtsfindungs- und ein Gesichtserkennungssystem auszuprobieren und mehr darüber zu erfahren, wie solche Systeme funktionieren und welchen Bereichen sie eingesetzt werden.
+</p>
+<p>
+Durch unser Projekt möchten wir grundlegendes Wissen über Künstliche Intelligenz am Beispiel der Gesichtserkennung zugänglich machen. Eure persönlichen Daten werden hier nicht gespeichert, die Nutzung der Systeme funktioniert lokal und wird auf dem Rechner oder dem Handy abgelegt und gelöscht, sobald du den Browser schließt.
+</p>
+<p>
+Viel Spaß beim Experimentieren und Lernen. 
+</p>
 
-<section class="video-embed">
-	<iframe src="https://www.youtube.com/embed/3LIvHF-IX9Y?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </section>
-<section class="container">
-	<p>The Brandenburg Gate is an iconic landmark of Berlin and Germany; it stands as a symbol of eventful European history and of unity and peace. The Reichstag building is the traditional seat of the German Parliament. It was remodeled by British architect Norman Foster in the 1990s and features a glass dome over the session area, which allows free public access to the parliamentary proceedings and magnificent views of the city.</p>
-	<p>
-	The East Side Gallery is an open-air exhibition of art painted directly on the last existing portions of the Berlin Wall. It is the largest remaining evidence of the city's historical division.</p>
-</section>
-
-
 
