--- a/content/experiment-a.html
+++ b/content/experiment-a.html
@@ -8,7 +8,10 @@
 			<div class="cover"></div>
 			<div class="info">
 				<h2>Gesichtserkennung oder nicht?</h2>
-				<button>Experiment starten</button>
+				<div class="controls">
+					<button>Experiment starten</button>
+					<a href="#more-info">Mehr erfahren</a>
+				</div>
 			</div>
 		</div>
 	</div>
@@ -56,6 +59,7 @@
 </section>
 
 <section class="container video-embed">
+	<h2>Video</h2><a id="more-info"></a>
 	<iframe src="https://www.youtube.com/embed/3LIvHF-IX9Y?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </section>
 
