--- a/content/experiment-b.html
+++ b/content/experiment-b.html
@@ -7,7 +7,10 @@
 			<div class="cover"></div>
 			<div class="info">
 				<h2>Gesichter wiedererkennen?</h2>
-				<button>Experiment starten</button>
+				<div class="controls">
+					<button>Experiment starten</button>
+					<a href="#more-info">Mehr erfahren</a>
+				</div>
 			</div>
 		</div>
 	</div>
@@ -15,6 +18,24 @@
 
 <section class="container">
 	<p>Lade ein Bild als Referenz hoch oder mach ein Foto mit der Kamera. Das Erkennungssystem wird dann versuchen Gesichter aus dem Referenzbild wiederzu erkennen.</p>
+
+	<div class="icon-help">
+		<div class="icon"><img src="/assets/icon-upload.png" /></div>
+		<p>lädt ein Bild von deinem Gerät als Referenzbild</p>
+	</div>
+	<div class="icon-help">
+		<div class="icon"><img src="/assets/icon-camera.png" /></div>
+		<p>verwendet das aktuelle Kamerabild als Referenz</p>
+	</div>
+	<div class="icon-help">
+		<div class="icon"><img src="/assets/icon-confirm.png" /></div>
+		<p>bestätigt das ausgewählte Referenxbild und die erkannten Gesichter</p>
+	</div>
+	<div class="icon-help">
+		<div class="icon"><img src="/assets/icon-cancel.png" /></div>
+		<p>bricht die Auswahl des Referencbildes ab</p>
+	</div>
+
 	<p>Wird es dich finden, oder vielleicht verwechseln?</p>
 	<p>Probier es aus.</p>
 </section>
@@ -56,6 +77,7 @@
 </section>
 
 <section class="container video-embed">
+	<h2>Video</h2><a id="more-info"></a>
 	<iframe src="https://www.youtube.com/embed/3LIvHF-IX9Y?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </section>
 
