updated text snippets

--- a/content/experiment-a.html
+++ b/content/experiment-a.html
@@ -18,48 +18,45 @@
 </section>
 
 <section class="container">
-	<p>Kannst du die Gesichtserkennung austricksen so dass du nicht mehr gefunden wirst?</p>
-	<p>Ein paar Dinge die du versuchen kannst:</p>
+	<p>In diesem Experiment kannst du ausprobieren, ob du das Gesichtsfindungssystem austricksen kannst. Das System erkennt ein Gesicht, wenn es grün markiert ist. Die Prozentzahl zeigt an,  mit welcher Wahrscheinlichkeit ein Gesicht als solches vom System erkannt wird. Nun hast du die Möglichkeit auszuprobieren, was alles dazu führen kann, dass das System dein Gesicht nicht mehr oder nicht gut erkennt. Nachfolgend einige Ideen dazu, welche Tricks die Erkennung erschweren können:</p>
 </section>
 
 <section class="container hint">
-	<h2 class="heading">Verdeckung</h2>
+	<h3 class="heading">Verdecke dein Gesicht</h3>
 	<div class="placeholder ar11 image">
 		<label>Foto</label>
 	</div>
 
 	<div class="inner">
-		<p>Versuche z.B. Teile deines Gesichts zu verdecken.</p>
-		<p>Besonders die Augen sind wichtig um Gesichter im Bild finden zu können.</p>
+		<p>Verdecke einen Teil deines Gesichts mit deiner Hand, einem Stück Papier oder etwas, das du gerade griffbereit hast. Besonders die Augen spielen in der Gesichtserkennung eine große Rolle. Probiere daher gerne aus, was dir der Kreis anzeigt, wenn du ein Auge oder beide verdeckst.</p>
 	</div>
 </section>
 
 <section class="container hint">
-	<h2 class="heading">Perspektive</h2>
+	<h3 class="heading">Wechsle die Perspektive</h3>
 	<div class="placeholder ar11 image">
 		<label>Foto</label>
 	</div>
 
 	<div class="inner">
-		<p>Die KI ist darauf trainiert Gesichter von vorne zu erkennnen.</p>
-		<p>Versuch' mal den Kopf zur Seite zu drehen oder zu neigen.</p>
+		<p>Diese Künstliche Intelligenz ist dazu trainiert worden, Gesichter von vorne zu sehen. Probiere aus, deinen Kopf zur Seite zu drehen oder zu neigen und betrachte die Färbung und die Prozentzahlen der Gesichtserkennung. Erkennst du einen Unterschied?</p>
 	</div>
 </section>
 
 <section class="container hint">
-	<h2 class="heading">Umgebung</h2>
+	<h3 class="heading">Verändere deine Umgebung</h3>
 	<div class="placeholder ar11 image">
 		<label>Foto</label>
 	</div>
 
 	<div class="inner">
-		<p>Die Umgebung zu ändern kann der KI auch die Arbeit schwerer machen, zum Beispiel wenn es nicht hell genug ist, oder zu hell.</p>
-		<p>Mach das Licht aus, oder halte die Kamera so dass die Sonne im Bild ist und blendet.</p>
+		<p>Die Umgebung hinter deinem Gesicht zu verändern, kann der KI die Arbeit erschweren. Probiere dich hier aus, du kannst deine Umgebung etwas abdunkeln oder beleuchten, indem du das Licht einmal ausschaltest oder halte die Kamera so, dass die Sonne im Bild ist. </p>
 	</div>
 </section>
 
 <section class="container video-embed">
-	<h2>Video</h2><a id="more-info"></a>
+	<h2>Erklärvideo zu der Gesichtsfindung (Face-Detection)</h2><a id="more-info"></a>
+	<p>Wenn du mehr zu dem Thema Face-Detection erfahren möchtest, erklärt dir Jürgen Geuter in diesem Video, wie das KI-System hinter diesem Experiment funktioniert und wo es eingesetzt wird.</p>
 	<iframe src="https://www.youtube.com/embed/3LIvHF-IX9Y?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </section>
 
