--- a/content/experiment-b.html
+++ b/content/experiment-b.html
@@ -17,8 +17,6 @@
 </section>
 
 <section class="container">
-	<p>Lade ein Bild als Referenz hoch oder mach ein Foto mit der Kamera. Das Erkennungssystem wird dann versuchen Gesichter aus dem Referenzbild wiederzu erkennen.</p>
-
 	<div class="icon-help">
 		<div class="icon"><img src="/assets/icon-upload.png" /></div>
 		<p>lädt ein Bild von deinem Gerät als Referenzbild</p>
@@ -36,48 +34,45 @@
 		<p>bricht die Auswahl des Referencbildes ab</p>
 	</div>
 
-	<p>Wird es dich finden, oder vielleicht verwechseln?</p>
-	<p>Probier es aus.</p>
+	<p>In diesem Experiment kannst du ausprobieren, ob du das Gesichtserkennungssystem  austricksen kannst. Das System erkennt dein Gesicht, wenn es grün markiert ist. Die Prozentzahl zeigt an,  mit welcher Wahrscheinlichkeit ein Gesicht als solches vom System erkannt wird. Nun hast du die Möglichkeit auszuprobieren, was alles dazu führen kann, dass das System dein Gesicht nicht mehr oder nicht gut erkennt. Nachfolgend einige Ideen dazu, welche Tricks die Erkennung erschweren können:</p>
 </section>
 
 <section class="container hint">
-	<h2 class="heading">Jünger und älter</h2>
+	<h3 class="heading">Verschiedene Altersstufen</h3>
 	<div class="placeholder ar11 image">
 		<label>Foto</label>
 	</div>
 
 	<div class="inner">
-		<p>Probier mal ein Foto hochzuladen auf dem zu deutlich jünger warst.</p>
-		<p>Vielleicht wirst du gar nicht mehr als die gleiche Person erkannt.</p>
+		<p>Lade Fotos hoch, die dich in unterschiedlichen Altersstufen zeigen, um festzustellen, ob das Gesichtserkennungssystem in der Lage ist, dich in verschiedenen Lebensabschnitten zu identifizieren.</p>
 	</div>
 </section>
 
 <section class="container hint">
-	<h2 class="heading">Viele ähnliche Gesichter</h2>
+	<h3 class="heading">Viele ähnliche Gesichter im Vergleich</h3>
 	<div class="placeholder ar11 image">
 		<label>Foto</label>
 	</div>
 
 	<div class="inner">
-		<p>Wenn viele ähnliche Gesichter im Bild sind kommt es leichter zu Verwechslungen.</p>
-		<p>Verwende ein Bild als Referenz auf dem sich viele ähnlich sehen.</p>
+		<p>Wenn mehrere ähnliche Gesichter auf einem Bild vorhanden sind, kann es leicht zu Verwechslungen kommen. Nutze ein Bild, auf dem mehrere Personen sich ähnlich sehen. Kann das System dein Gesicht korrekt identifizieren?</p>
 	</div>
 </section>
 
 <section class="container hint">
-	<h2 class="heading">Mehrmals das Gleiche</h2>
+	<h3 class="heading">Mehrmals dasselbe Gesicht</h3>
 	<div class="placeholder ar11 image">
 		<label>Foto</label>
 	</div>
 
 	<div class="inner">
-		<p>Wenn mehrmals das gleiche Gesicht vorhanden ist, wird es uneindeutig.</p>
-		<p>Verwende mehrere Bilder von dir als Referenz gleichzeitig und finde heraus welches eher wiedererkannt wird und wie du das beeinflussen kannst.</p>
+		<p>Mehrfache Präsenz desselben Gesichts Wenn das gleiche Gesicht mehrmals auf verschiedenen Fotos erscheint, kann es zu Unsicherheiten führen. Verwende mehrere Bilder von dir als gleichzeitige Referenzen und untersuche, welches davon besser erkannt wird und wie du diesen Vorgang beeinflussen kannst.</p>
 	</div>
 </section>
 
 <section class="container video-embed">
-	<h2>Video</h2><a id="more-info"></a>
+	<h2>Video von Jürgen über Gesichtserkennung (Facial-Recognition)</h2><a id="more-info"></a>
+	<p>Wenn du dich tiefer mit dem Thema Gesichtserkennung auseinandersetzen möchtest, erläutert dir Jürgen Geuter in diesem Video, wie das KI-System hinter diesem Experiment funktioniert, wo es im Einsatz ist und welchen Einfluss es auf unsere Gesellschaft hat.</p>
 	<iframe src="https://www.youtube.com/embed/3LIvHF-IX9Y?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </section>
 
