--- a/content/index.html
+++ b/content/index.html
@@ -4,7 +4,7 @@
 <section class="container">
 	<h1>Willkommen!</h1>
 <p>
-Mit dieser Webseite möchten wir euch einen spannenden Einblick in die Welt der Künstlichen Intelligenz rund um das Thema Gesichtserkennung geben. Dafür haben wir zwei Experimente zu Facial-Detection und Facial-Recognition als Teil des Forschungsprojekts Künstliche Intelligenz, menschlich erklärt entwickelt. Dieses Projekt wurde in Kooperation zwischen dem Alexander von Humboldt Institut für Internet und Gesellschaft (HIIG) und der gemeinnützigen Organisation neuland & gestalten durchgeführt und von der Entwicklerin Esther Weidauer umgesetzt.
+Mit dieser Webseite möchten wir euch einen spannenden Einblick in die Welt der Künstlichen Intelligenz rund um das Thema Gesichtserkennung geben. Dafür haben wir zwei Experimente zu Facial-Detection und Facial-Recognition als Teil des Forschungsprojekts <a href="https://www.hiig.de/project/ki-menschlich-erklaert/">Künstliche Intelligenz, menschlich erklärt</a> entwickelt. Dieses Projekt wurde in Kooperation zwischen dem <a href="https://www.hiig.de/">Alexander von Humboldt Institut für Internet und Gesellschaft (HIIG)</a> und der gemeinnützigen Organisation <a href="https://neulandundgestalten.de/">neuland &amp; gestalten</a> durchgeführt und von der Entwicklerin Esther Weidauer umgesetzt.
 </p>
 <p>
 Diese Webseite lädt alle dazu ein, ein Gesichtsfindungs- und ein Gesichtserkennungssystem auszuprobieren und mehr darüber zu erfahren, wie solche Systeme funktionieren und welchen Bereichen sie eingesetzt werden.
