add explainer images and alt text

--- a/content/experiment-a.html
+++ b/content/experiment-a.html
@@ -23,8 +23,8 @@
 
 <section class="container hint">
 	<h3 class="heading">Verdecke dein Gesicht</h3>
-	<div class="placeholder ar11 image">
-		<label>Foto</label>
+	<div class="image">
+		<img src="/assets/explainer-images/part-teal.svg" alt="Silhouette eines Kopfes mit der rechten Gesichtshälfte schraffiert" />
 	</div>
 
 	<div class="inner">
@@ -34,8 +34,8 @@
 
 <section class="container hint">
 	<h3 class="heading">Wechsle die Perspektive</h3>
-	<div class="placeholder ar11 image">
-		<label>Foto</label>
+	<div class="image">
+		<img src="/assets/explainer-images/perspective-teal.svg" alt="Seitliche Silhouette eines Kopfes mit einem Pfeil im Uhrseigerzinn darüber" />
 	</div>
 
 	<div class="inner">
@@ -45,8 +45,8 @@
 
 <section class="container hint">
 	<h3 class="heading">Verändere deine Umgebung</h3>
-	<div class="placeholder ar11 image">
-		<label>Foto</label>
+	<div class="image">
+		<img src="/assets/explainer-images/background-teal.svg" alt="Silhouette eines Kopfes vor schraffiertem Hintergrund" />
 	</div>
 
 	<div class="inner">
