--- a/content/experiment-b.html
+++ b/content/experiment-b.html
@@ -39,8 +39,8 @@
 
 <section class="container hint">
 	<h3 class="heading">Verschiedene Altersstufen</h3>
-	<div class="placeholder ar11 image">
-		<label>Foto</label>
+	<div class="image">
+		<img src="/assets/explainer-images/age-teal.svg" alt="Vier einfach gezeichnete Gesichter unterschiedlichen Alters" />
 	</div>
 
 	<div class="inner">
@@ -50,8 +50,8 @@
 
 <section class="container hint">
 	<h3 class="heading">Viele ähnliche Gesichter im Vergleich</h3>
-	<div class="placeholder ar11 image">
-		<label>Foto</label>
+	<div class="image">
+		<img src="/assets/explainer-images/similar-teal.svg" alt="Vier sehr ähnliche Kopf-Silhouetten" />
 	</div>
 
 	<div class="inner">
@@ -61,8 +61,8 @@
 
 <section class="container hint">
 	<h3 class="heading">Mehrmals dasselbe Gesicht</h3>
-	<div class="placeholder ar11 image">
-		<label>Foto</label>
+	<div class="image">
+		<img src="/assets/explainer-images/same-teal.svg" alt="Viermal die gleiche Kopf-Silhouette" />
 	</div>
 
 	<div class="inner">
