added video embeds

--- a/content/experiment-a.html
+++ b/content/experiment-a.html
@@ -57,7 +57,7 @@
 <section class="container video-embed">
 	<h2>Erklärvideo zu der Gesichtsfindung (Face-Detection)</h2><a id="more-info"></a>
 	<p>Wenn du mehr zu dem Thema Face-Detection erfahren möchtest, erklärt dir Jürgen Geuter in diesem Video, wie das KI-System hinter diesem Experiment funktioniert und wo es eingesetzt wird.</p>
-	<iframe src="https://www.youtube.com/embed/3LIvHF-IX9Y?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+	<iframe src="https://www.youtube-nocookie.com/embed/iW8YDWYIXlA?si=V6N9anYQie_GAIP-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </section>
 
 <script src="/static/face-api.js"></script>
