--- a/content/experiment-b.html
+++ b/content/experiment-b.html
@@ -73,7 +73,7 @@
 <section class="container video-embed">
 	<h2>Video von Jürgen über Gesichtserkennung (Facial-Recognition)</h2><a id="more-info"></a>
 	<p>Wenn du dich tiefer mit dem Thema Gesichtserkennung auseinandersetzen möchtest, erläutert dir Jürgen Geuter in diesem Video, wie das KI-System hinter diesem Experiment funktioniert, wo es im Einsatz ist und welchen Einfluss es auf unsere Gesellschaft hat.</p>
-	<iframe src="https://www.youtube.com/embed/3LIvHF-IX9Y?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+	<iframe src="https://www.youtube-nocookie.com/embed/9OP7Sn3MfeM?si=tetie5yCMb9qqFjL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </section>
 
 <script src="/static/face-api.js"></script>
