change experiment page URLs

--- a/content/gesichter-erkennen.html
+++ b/content/gesichter-erkennen.html
@@ -31,7 +31,7 @@
 	</div>
 	<div class="icon-help">
 		<div class="icon"><img src="/assets/icon-cancel.png" /></div>
-		<p>bricht die Auswahl des Referencbildes ab</p>
+		<p>bricht die Auswahl des Referenzbildes ab</p>
 	</div>
 
 	<p>In diesem Experiment kannst du ausprobieren, ob du das Gesichtserkennungssystem  austricksen kannst. Das System erkennt dein Gesicht, wenn es grün markiert ist. Die Prozentzahl zeigt an,  mit welcher Wahrscheinlichkeit ein Gesicht als solches vom System erkannt wird. Nun hast du die Möglichkeit auszuprobieren, was alles dazu führen kann, dass das System dein Gesicht nicht mehr oder nicht gut erkennt. Nachfolgend einige Ideen dazu, welche Tricks die Erkennung erschweren können:</p>
